# pyiceberg-jdbc

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
src/pyiceberg_jdbc/: catalog.py  models.py
tests/: common.py  test_catalog.py
